--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,8 @@ body{
         display: none;
     }
 
-    .apresentacao__conteudo__texto{
+    .apresentacao__conteudo__texto,
+    .apresentacao__conteudo__texto__sobre{
         font-size: 1.5rem;
         text-align: center;
     }
