--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,8 @@ img{
 }
 .sidenav li a:hover{
     background: var(--cor-primaria);
+    box-shadow: 0px 0px 20px 10px #0ff;
+
 }
 /* END SIDENAV */
 
