--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,95 @@ p{
     color: white;
     text-decoration: underline;
 }
+/* END FOOTER */
+
+/* MEDIA */
+@media only screen and (max-width: 1200px) {
+    .estrutura{
+        grid-template-areas: 
+        "header header header"
+        "sidenav content content"
+        "sidenav x x"
+        "footer footer footer";
+    }
+    .x{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 760px) {
+    .estrutura{
+        grid-template-columns: 100%;
+        grid-template-areas: 
+        "header"
+        "sidenav"
+        "content"
+        "footer";
+    }
+    .header{
+        grid-template-columns: auto;
+    }
+    .header nav a{
+        font-size: 1em;
+    }
+    .header li + li{
+        margin-left: 10px;
+    }
+    .sidenav ul{
+        display: flex;
+    }
+    .sidenav ul li{
+        flex: 1 0 60px;
+    }
+    .sidenav{
+        padding: 0 var(--espaco-padrao);
+    }
+    .sidenav li a{
+        margin: var(--espaco-padrao) var(--espaco-padrao) var(--espaco-padrao) 0;
+    }
+    .sidenav{
+        position: relative;
+        overflow-x: auto;
+        touch-action: cross-slide-x;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
+    .sidenav::after{
+        content: "►";
+        fill: var(--roxo-fraco);
+        position: absolute;
+        top: var(--borda);
+        right: var(--espaco-padrao);
+        color: rgba(0, 0, 0, .3);
+        animation: seta .5s ease-in 0s infinite alternate;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+   .content{
+    grid-template-columns: auto;
+  }
+  .caracteristicas{
+    display: none;
+  }
+  .titulo{
+    font-size: 0.8em;
+  }
+  p{
+    font-size: 17px;
+  }
+
+}
+
+@keyframes seta{
+    from{
+        right: var(--espaco-padrao);
+    }
+    to {
+        right: 20px;
+    }
+}
+
 
 
 
@@ -357,60 +446,4 @@ p{
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
-}
-
-@media(max-width: 1000px){
-    .cabecalho{
-        padding: 1% 0% 0% 16%;
-    }
-
-    .cabecalho__menu{
-        display: flex;
-        gap: 40px;
-    }
-
-    .apresentacao{
-        padding: 4.57% 4%;
-        flex-direction: column;
-        gap: 40px;
-    }
-
-    .apresentacao__conteudo{
-        width: 100%;
-    }
-
-    .apresentacao__conteudo__titulo{
-        font-size: 2.1rem;
-        text-align: center;
-    }
-
-    .imagem_index_primeira{
-        width: 100%;
-        display: initial;
-    }
-    .imagem_index_segunda{
-        display: none;
-    }
-
-    .imagem_sobre_primeira{
-        width: 100%;
-        display: initial;
-    }
-
-    .imagem_sobre_segunda{
-        display: none;
-    }
-
-    .apresentacao__conteudo__texto,
-    .apresentacao__conteudo__texto__sobre{
-        font-size: 1.5rem;
-        text-align: center;
-    }
-
-    .apresentacao__conteudo__links__subtitulo{
-        font-size: 1.2rem;
-        text-align: center;
-    }
-
-
 }
